--- a/pancakerecipe.html
+++ b/pancakerecipe.html
@@ -10,17 +10,18 @@
   <title>the corner of chef</title>
   <!--display the name of the website-->
 </head>
-<h2>****************************</h2>
-<h1>The Great Old Pancakes</h1>
-<h2>****************************</h2>
+<h2>********************************</h2>
+<h1>🥞 The Great Old Pancakes</h1>
+<h2>********************************</h2>
 <h4> This is one of the best recipe that my mother recieved from her mother as well</h4>
 
 <body>
   <!--display all content for the visitor-->
   <p>Hello, my name is <strong><em> Israel </em></strong> and this is my first time doing a website or the basic.</p>
-  <p>This recipe is one of my favorites because you feel the warm and favor at home.</p>
-  <p>we would like to start with what you need to have: </p>
-  <p><strong>ingredients:</strong></p>
+  <p>This recipe is one of my favorites because you feel the warm and favor of home.</p>
+  <p>The pancake from this recipe is one of the best pancakes you will be eating, the aroma and the fragrance has a great impact on your taste 😊.</p>
+  <p>Now that you know that these pancake would change your view of pancake, lets see what you need to start cooking: </p>
+  <p><strong>Ingredients:</strong></p>
   <!--using ul is unordered items-->
   <ul>
     <li><em>1 and 1/2 cup of Flour</em></li>
@@ -33,25 +34,35 @@
   <p>Now that we have all ingredients, we can start cooking Pancakes.</p>
   <ol>
     <!--using ol is for ordered items-->
-    <li>In a large bowl, sift together the</li>
+    <li>In a large bowl, sift together the 🥣</li>
     <ul>
       <li>Flour</li>
       <li>baking power</li>
       <li>salt</li>
       <li>sugar</li>
     </ul>
-    <li>after you make it well sifted, in the center add:</li>
+    <li>after you make it well sifted, in the center add: 🥣</li>
     <ul>
       <li>milk</li>
       <li>egg</li>
       <li>melted butter</li>
     </ul>
-    <li>Mix it until smooth.</li>
-    <li>Heat lightly oiled frying pans over medium high heat</li>
+    <li>Mix it until smooth. 🥄</li>
+    <li>Heat lightly oiled frying pans over medium high heat 🍳</li>
     <li>Pour or scoop 1/4 cup of batter onto the pan. make it sure to have a good circle</li>
-    <li>Flip it over when the base of the pancake is brown, and it is ready when both sides are brown.</li>
-    <li>serve hot and use some syrup and condensed milk as well</li>
+    <li>Flip it over when the base of the pancake is brown, and it is ready when both sides are brown. 🥢</li>
+    <li>serve hot and use some syrup and condensed milk as well 🍽️</li>
   </ol>
+  <h4>Now that you have finished and served on the table, taste and enjoy the flavor and texture of it,
+    smell the fragrance, explore the flavor that with each bite will start coming out of the center of
+    the pancake. Feel the impact of the taste that would transport you home and feel the warmness of it
+  like it is your grandmother being there padding your head like you did a great job. </h4>
+  <p>Now you have become a good chef 👨‍🍳/👩‍🍳 </p>
+  <img src="https://i.imgur.com/45EC8.jpg" width ="800" height="800"alt="Pancake">
+  <h2>Pancakes would be looking like this </h2>
+  <img src="https://i.imgur.com/SKbkfMk.jpg" width="800" height="800" alt="Pancakes">
+  <h2>If you want to make it a little cooler your pancakes, you could use some natural color to make it like this, and by adding some bacon, egg and sausage to make it a full breakfast.</h2>
+  <img src="https://i.imgur.com/m3BnwYd.jpg" alt="GreenPancakes">
 
 </body>
 
